feat(mobile): reset forgot password (#31)
